--- a/templates/booking/new.html
+++ b/templates/booking/new.html
@@ -17,7 +17,7 @@
       <option value="{{ session.id }}">{{ session.name }}</option>
       {% endfor %}
     </select>
-  <input class="btn btn--action" type='submit' value="Visit">
+  <input class="btn btn--action" type='submit' value="Submit">
 </form>
 
 {% endblock %}
