New Member Fuction added

--- a/templates/member/index.html
+++ b/templates/member/index.html
@@ -14,4 +14,8 @@
   </tr>
   {% endfor %}
 </table>
+
+<p class="btn--wrapper">
+    <a class="btn btn--action" href="/member/new">New member</a>
+  </p>
 {% endblock %}
