New Session html added

--- a/templates/session/index.html
+++ b/templates/session/index.html
@@ -3,6 +3,10 @@
 {% block content %}
 <h1>Sessions</h1>
 
+<p class="btn--wrapper">
+    <a class="btn btn--action" href="/session/new">Create new session</a>
+  </p>
+
 <table>
   <tr>
     <th>Name</th>
@@ -21,4 +25,5 @@
   </tr>
   {% endfor %}
 </table>
+
 {% endblock %}
