--- a/templates/member/new.html
+++ b/templates/member/new.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Create New Member!</h1>
 
-    <form action="/member/new" method="post">
+    <form action="/member" method="post">
       <label for="name">Name</label>
       <input type="text" name="name" id="name">
       <input type="submit" value="Add Member">
