--- a/templates/session/index.html
+++ b/templates/session/index.html
@@ -22,6 +22,8 @@
     <td>{{ session.date }}</td>
     <td></td>
     <td>{{ session.time }}</td>
+    <td><button>Delete session</button></td>
+    <td><button>Edit session</button></td>
   </tr>
   {% endfor %}
 </table>
