Delete session function added

--- a/templates/member/index.html
+++ b/templates/member/index.html
@@ -17,7 +17,7 @@
     <td><a href="/member/{{ member.id }}"> {{member.name}} </a></td>
     <td>
         <form action="/member/{{ member.id }}/update">
-            <input type="submit" value="Edit member" />
+            <input type="submit" value="Edit" />
         </form>
         </td>
     <td>
