--- a/templates/member/index.html
+++ b/templates/member/index.html
@@ -22,8 +22,8 @@
         </td>
     <td>
         <form class="delete-form" action="/member/{{member.id}}/delete" method="post">
-                    <button>Delete</button>
-                </form>
+            <input class="btn btn--danger" type="submit" value="delete" />
+            </form>
     </td>
 
   </tr>
