--- a/templates/session/index.html
+++ b/templates/session/index.html
@@ -29,8 +29,8 @@
         </td>
     <td>
         <form class="delete-form" action="/session/{{session.id}}/delete" method="post">
-                    <button>Delete</button>
-                </form>
+            <input class="btn btn--danger" type="submit" value="delete" />
+        </form>
     </td>
   </tr>
   {% endfor %}
