--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Gym Advisor</title>
+  <title>Gym Bro</title>
   <link href="https://fonts.googleapis.com/css?family=Merriweather|Special+Elite" rel="stylesheet">
   
 
@@ -14,6 +14,9 @@
 <main class="flex flex--row">
   <nav>
     <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
       <li>
         <a href="/session">Sessions</a>
       </li>
