--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,8 @@
 {% extends 'base.html'%}
 
 {% block content %}
-<h1>GymAdvisor</h1>
+<h1>Gym Bro</h1>
 
-<p>No Pain No Gain!</p>
+<p>Gym bro does the heavy lifting so you don't have to!</p>
+<p>All gain no pain.... bro!</p>
 {% endblock %}
