--- a/templates/member/edit.html
+++ b/templates/member/edit.html
@@ -5,7 +5,7 @@
 
     <form action="/member/{{member.id}}/update" method="post">
         <label for="member-name">Name</label>
-        <input type="text" name="name" id="name" value="name">
+        <input type="text" name="name" id="name" value={{member.name}}>
 
         <button>Submit</button>
     </form>
