--- a/templates/member/new.html
+++ b/templates/member/new.html
@@ -6,6 +6,11 @@
     <form action="/member" method="post">
       <label for="name">Name</label>
       <input type="text" name="name" id="name">
+      <label for="age">Age</label>
+      <input type="number" name="age" id="age">
+      <label for="address">Address</label>
+      <input type="text" name="address" id="address">
+
       <input type="submit" value="Add Member">
     </form>
 
