--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,6 @@
 {% block content %}
 <h1>Gym Bro</h1>
 
-<p>Gym bro does the heavy lifting so you don't have to!</p>
-<p>All gain no pain.... bro!</p>
+<h2>Gym bro does the heavy lifting so you don't have to!</h2>
+<h2>All gain no pain.... bro!</h2>
 {% endblock %}
