text added to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,16 @@
 {% block content %}
 <h1>Gym Bro</h1>
 
-<h2>Gym bro does the heavy lifting so you don't have to!</h2>
-<h2>All gain no pain.... bro!</h2>
+    <h2>Gym bro does the heavy lifting so you don't have to!</h2>
+    <h2>All gain no pain.... bro!</h2>
+
+        <p> What exactly is Gym Bro... bro?</p>
+
+        <p>Gym Bro is your lifting partner when it comes to the gym, allowing you as the user to:</p>
+        <p>create and edit Members</p>
+        <p>create and edit Classes/Sessions</p>
+        <p>to book members on specific classes/sessions</p>
+        <p>show a list of all upcoming classes</p>
+        <p>show all members that are booked in for a particular class</p>
+
 {% endblock %}
