bullet points added to li

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,13 @@
 
         <p> What exactly is Gym Bro... bro?</p>
 
+        <ul>
         <p>Gym Bro is your lifting partner when it comes to the gym, allowing you as the user to:</p>
-        <p>create and edit Members</p>
-        <p>create and edit Classes/Sessions</p>
-        <p>to book members on specific classes/sessions</p>
-        <p>show a list of all upcoming classes</p>
-        <p>show all members that are booked in for a particular class</p>
+        <li>create and edit Members</li> 
+        <li>create and edit Classes/Sessions</li>
+        <li>to book members on specific classes/sessions</li>
+        <li>show a list of all upcoming classes</li>
+        <li>show all members that are booked in for a particular class</li>
+    </ul>
 
 {% endblock %}
