--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <h1>Gym Bro</h1>
 
     <h2>Gym bro does the heavy lifting so you don't have to!</h2>
-    <h2>All gain no pain.... bro!</h2>
+    <h2>All gain no pain... bro!</h2>
 
         <p> What exactly is Gym Bro... bro?</p>
 
