capacity function added

--- a/templates/session/edit.html
+++ b/templates/session/edit.html
@@ -10,6 +10,8 @@
         <input type="date" name="date" id="date" value={{session.date}}>
         <label for="session-time">Time</label>
         <input type="time" name="time" id="time" value={{session.time}}>
+        <label for="session-capacity">Capacity</label>
+        <input type="int" name="capacity" id="capacity" value={{session.capacity}}>
 
         <button>Submit</button>
     </form>
