--- a/templates/session/new.html
+++ b/templates/session/new.html
@@ -10,7 +10,11 @@
       <input type="date" name="date" id="date">
       <label for="time">Time</label>
       <input type="time" name="time" id="time">
+      <label for="capacity">Capacity</label>
+      <input type="int" name="capacity" id="capacity">
+
       <input type="submit" value="Add Session">
+
     </form>
 
 
