--- a/templates/session/index.html
+++ b/templates/session/index.html
@@ -14,6 +14,8 @@
     <th>Date</th>
     <th></th>
     <th>Time</th>
+    <th></th>
+    <th>Capacity</th>
   </tr>
   {% for session in sessions %}
   <tr>
@@ -22,6 +24,8 @@
     <td>{{ session.date }}</td>
     <td></td>
     <td>{{ session.time }}</td>
+    <td></td>
+    <td>{{ session.capacity }}</td>
     <td>
         <form action="/session/{{ session.id }}/update">
             <input type="submit" value="Edit" />
