--- a/templates/booking/error.html
+++ b/templates/booking/error.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Session Full</h1>
 <script src="https://kit.fontawesome.com/c3bcc9b5af.js" crossorigin="anonymous"></script>
-<h2>If your not fast you're last... bro!    <i class="fa-solid fa-skull-crossbones fa-1xl fa-spin"></i></h2>
+<h2>If you're not fast you're last... bro!    <i class="fa-solid fa-skull-crossbones fa-1xl fa-spin"></i></h2>
 
 
 
